unpackaged/main/default/objects/Significant_Other__c/Significant_Other__c.object-meta.xml
<CustomObject>
    <label>Significant Other</label>
    <nameField>
        <displayFormat>SO-{00000000}</displayFormat>
        <label>Significant Other ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Significant Others</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>