unpackaged/main/default/objects/Significant_Other__c/fields/ACD_Substitute_Decision_Maker__c.field-meta.xml
<CustomField>
    <fullName>ACD_Substitute_Decision_Maker__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ACD Substitute Decision Maker?</label>
    <type>Checkbox</type>
</CustomField>