unpackaged/main/default/objects/Significant_Other__c/fields/Are_they_Co_resident_with_the_Consumer__c.field-meta.xml
<CustomField>
    <fullName>Are_they_Co_resident_with_the_Consumer__c</fullName>
    <label>Are they Co-resident with the Consumer?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>