unpackaged/main/default/objects/Significant_Other__c/fields/Are_they_their_Carer__c.field-meta.xml
<CustomField>
    <fullName>Are_they_their_Carer__c</fullName>
    <label>Are they their Carer?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>