unpackaged/main/default/objects/Significant_Other__c/fields/Is_this_the_Parent_Legal_Guardian__c.field-meta.xml
<CustomField>
    <fullName>Is_this_the_Parent_Legal_Guardian__c</fullName>
    <label>Is this the Parent/Legal Guardian</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>