unpackaged/main/default/objects/Significant_Other__c/fields/Perferred_Contact_Time__c.field-meta.xml
<CustomField>
    <fullName>Perferred_Contact_Time__c</fullName>
    <label>Perferred Contact Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>