unpackaged/main/default/objects/Significant_Other__c/fields/Person_Responsible__c.field-meta.xml
<CustomField>
    <fullName>Person_Responsible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Person Responsible?</label>
    <type>Checkbox</type>
</CustomField>