unpackaged/main/default/objects/Significant_Other__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Son</fullName>
            </value>
            <value>
                <fullName>Guardianship Care and Protection Order</fullName>
            </value>
            <value>
                <fullName>Former partner or Ex partner</fullName>
            </value>
            <value>
                <fullName>Stepfather</fullName>
            </value>
            <value>
                <fullName>Stepmother</fullName>
            </value>
            <value>
                <fullName>Brother-in-law</fullName>
            </value>
            <value>
                <fullName>Sister-in-law</fullName>
            </value>
            <value>
                <fullName>Brother</fullName>
            </value>
            <value>
                <fullName>Sister</fullName>
            </value>
            <value>
                <fullName>Uncle</fullName>
            </value>
            <value>
                <fullName>Aunt</fullName>
            </value>
            <value>
                <fullName>Grandfather</fullName>
            </value>
            <value>
                <fullName>Grandmother</fullName>
            </value>
            <value>
                <fullName>Foster Father</fullName>
            </value>
            <value>
                <fullName>Foster Mother</fullName>
            </value>
            <value>
                <fullName>Friend/Neighbour - male</fullName>
            </value>
            <value>
                <fullName>Friend/Neighbour - female</fullName>
            </value>
            <value>
                <fullName>Other relative - male - not listed elsewhere</fullName>
            </value>
            <value>
                <fullName>Other relative - female - not listed elsewhere</fullName>
            </value>
            <value>
                <fullName>Son-in-Law</fullName>
            </value>
            <value>
                <fullName>Daughter-in-Law</fullName>
            </value>
            <value>
                <fullName>Daughter</fullName>
            </value>
            <value>
                <fullName>Father</fullName>
            </value>
            <value>
                <fullName>Mother</fullName>
            </value>
            <value>
                <fullName>Husband/Male Partner</fullName>
            </value>
            <value>
                <fullName>Wife/Female Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>