unpackaged/main/default/objects/Significant_Other__c/validationRules/ACD_Substitute_Decision_Maker.validationRule-meta.xml
<ValidationRule>
    <fullName>ACD_Substitute_Decision_Maker</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ACD_Substitute_Decision_Maker__c == true ,
Person_Responsible__c == true)</errorConditionFormula>
    <errorDisplayField>ACD_Substitute_Decision_Maker__c</errorDisplayField>
    <errorMessage>Both the ACD Substitute decision maker or Person responsible is true. Only one can be true.</errorMessage>
</ValidationRule>